# aigov-compliance-engine

./: .gitignore  ARCHITECTURE.md  DEMO_FLOW.md  ENTERPRISE_LAYER.md  Makefile  OPEN_SOURCE_SCOPE.md  README.md  action.yml  docker-compose.yml  package.json
python/: pyproject.toml
python/aigov_py/: __init__.py  ai_discovery_completed.py  approve.py  assert_ci_evidence_bundle.py  chain.py  ci_fallback.py  cli.py  cli_exit.py  client.py  crypto.py  demo.py  demo_golden_path.py  discovery_policy_mapping.py  discovery_scan.py  emit_event.py  evaluate.py  events.py  evidence_artifact_gate.py  evidence_pack.py  export_bundle.py  fetch_bundle_from_govai.py  govai_postgres_runs.py  ingest_run.py  manifest.py  pipeline_train.py  policy_loader.py  promote.py  prototype_domain.py  report.py  report_fill.py  report_init.py  supabase_db.py  types.py  verify.py
python/govai/: __init__.py  client.py  compliance.py  export.py
python/tests/: test_cli_terminal_sdk.py  test_compliance_workflow_contract.py  test_demo_deterministic.py  test_demo_golden_path.py  test_discovery_policy_mapping.py  test_evidence_artifact_gate.py  test_evidence_pack_init_cli.py  test_experiments.py  test_govai_sdk.py  test_preflight_cli.py  test_workflow_compliance_invariants.py
rust/: Cargo.toml  Dockerfile  audit_log.jsonl.bak.1769882967  audit_log__default.jsonl  policy.dev.json  policy.staging.json
rust/migrations/: 0001_govai_core.sql  0002_add_compliance_context_fields.sql  0003_compliance_workflow.sql  0004_console_runs.sql  0005_govai_api_key_usage.sql  0006_run_environment.sql  0007_govai_usage_counters.sql  0008_govai_metering.sql  0009_password_reset_tokens.sql  0010_govai_usage_operation_counters.sql  0011_supabase_tenant_access_control.sql  0012_billing_persistence_foundation.sql  0013_billing_usage_trace.sql  0014_tenant_stripe_billing.sql  0015_stripe_billing_subscription_items.sql  0016_unique_stripe_customer_id.sql  0017_identity_audit_and_delegations.sql
rust/src/: api_error.rs  (+29 more)
(+405 files in other folders)
