[package]
name = "aigov_immutable_s3"
version = "0.1.0"
edition = "2021"

[dependencies]
aigov_audit = { path = "../..", package = "aigov_audit" }
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1.8.16", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.132.0"
chrono = { version = "0.4" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
